# LockzhinerAI

./: .gitignore  README.en.md  README.md
Cpp_example/A01_capture/: README.md
Cpp_example/A02_GPIO/: CMakeLists.txt  GPIO_Write.cc  README.md
Cpp_example/A03_PWM/: CMakeLists.txt  PWM.cc  README.md
Cpp_example/A04_ADC/: CMakeLists.txt  README.md
Cpp_example/A05_USART/: README.md  USART_Read.cc
Cpp_example/B01_basic_method/: CMakeLists.txt  README.md
Cpp_example/B02_Image_information_statistics/: CMakeLists.txt  Image_information_statistics.cc  README.md
Cpp_example/B03_Draw/: CMakeLists.txt  Draw.cc  README.md
Cpp_example/C01_find_blobs/: CMakeLists.txt  README.md
Cpp_example/C02_TemplateMatching/: CMakeLists.txt  README.md  TemplateMatching.cc
Cpp_example/C03_Template_Matching_more/: CMakeLists.txt  README.md  Template_Matching_more.cc
Cpp_example/C04_find_contours/: CMakeLists.txt  README.md  find_circle.cc
Cpp_example/C05_Finecolorandshape/: CMakeLists.txt  Finecolorandshape.cc  README.md
Cpp_example/C06_test_qr_code_detector/: CMakeLists.txt  README.md  test_qr_code_detector.cc
Cpp_example/C07_test_bar_codeDetector/: CMakeLists.txt  README.md
Cpp_example/D01_test_detection/: README.md  test_detection.cc
Cpp_example/D02_DigitHandRecog/: DigitHandRecog.cc  README.md
Cpp_example/D03_face_recognition_system/: README.md
Cpp_example/D04_distance/: CMakeLists.txt  README.md  distance.cc
Cpp_example/D05_OCR/: CMakeLists.txt  README.md
Cpp_example/D05_ocr_text_recognition/: README.md
Cpp_example/D06_ocr_text_detection/: CMakeLists.txt  README.md  ncnn_dbnet.cc
Cpp_example/D07_ocr_synthesis/: CMakeLists.txt  README.md
Cpp_example/D08_pp_humanseg/: CMakeLists.txt  README.md
Cpp_example/D09_plate_recognize/: README.md  plate_recognize.cc
Cpp_example/D10_yolov5/: CMakeLists.txt  README.md  main.cc  postprocess.cc  postprocess.h  yolov5.cc  yolov5.h
Cpp_example/D10_yolov5/model/: label.txt
configs/: LZ-ArcFace.yaml  LZ-LPRNet.yaml  LZ-MobileNetV2_x1_0.yaml  LZ-MobileNetV3.yaml  LZ-MobileNetV3_fp32.yaml  LZ-MobileNetV3_large_x1_0.yaml  LZ-Picodet.yaml  LZ-Picodet_fp32.yaml  LZ-Picodet_int8.yaml  LZ-RetinaFace.yaml
cpp_example/A01_capture/: CMakeLists.txt  README.md  test_capture.cc
cpp_example/A02_GPIO/: GPIO_Read.cc  README.md
cpp_example/A03_PWM/: README.md
cpp_example/A04_ADC/: ADC.cc  README.md
cpp_example/A05_USART/: CMakeLists.txt  README.md  USART_Write.cc
cpp_example/B01_basic_method/: README.md  basic_method.cc
cpp_example/B02_Image_information_statistics/: README.md
cpp_example/B03_Draw/: README.md
cpp_example/C01_find_blobs/: README.md  find_blobs.cc
cpp_example/C02_TemplateMatching/: README.md
cpp_example/C03_Template_Matching_more/: README.md
cpp_example/C04_find_contours/: README.md  find_line.cc  find_polygon.cc
cpp_example/C05_Finecolorandshape/: README.md
cpp_example/C06_test_qr_code_detector/: README.md
cpp_example/C07_test_bar_codeDetector/: CMakeLists.txt  README.md  test_bar_codeDetector.cc
cpp_example/D01_test_detection/: CMakeLists.txt  README.md
cpp_example/D02_DigitHandRecog/: CMakeLists.txt  README.md
cpp_example/D03_face_recognition_system/: CMakeLists.txt  README.md  face_recognition_system.cc
cpp_example/D04_distance/: README.md
cpp_example/D05_ocr_text_recognition/: CMakeLists.txt  README.md  ncnn_rec.cc
cpp_example/D06_ocr_text_detection/: README.md
cpp_example/D07_ocr_synthesis/: OcrLite.cc  README.md
cpp_example/D08_pp_humanseg/: README.md  pp_humanseg.cc
cpp_example/D09_plate_recognize/: CMakeLists.txt  README.md  myfontface.h
docs/: device_parameters.md
docs/introductory_tutorial/: burn_image.md  connect_device_using_ssh.md  cpp_development_environment.md  development_environment.md  python_development_environment.md  wifi_config.md
docs/models/: arcface.md  environment.md  lprnet.md  retinaface.md  tensorflow_model_convert.md  人脸检测复现流程.md
example/hello_world/: CMakeLists.txt  README.md  check_opencv_version  hello_world.cpp
example/opencv_example/: OpenCV_API.md
example/opencv_example/opencv_circle_detect/python/: test_hough_circle.py
example/opencv_example/opencv_circle_detection/: README.md
example/opencv_example/opencv_edge_detection/: README.md
example/opencv_example/opencv_line_detection/: README.md
example/opencv_example/opencv_rectangle_detection/: README.md
example/opencv_example/opencv_triangle_detection/: README.md
example/patrol_line/: README.md
example/patrol_line/Cpp/: README.md  main.cc
example/patrol_line/cpp/: CMakeLists.txt  README.md  patrol_line.cc
example/periphery/adc/: README.md  test_adc.cc
example/periphery/adc/c++/: CMakeLists.txt  (+1 more)
example/periphery/capture/: README.md  test_capture.cc
example/periphery/gpio/: CMakeLists.txt  README.md  test_gpio_read.cc  test_gpio_write.cc
example/periphery/gpio/cpp/: CMakeLists.txt  README.md  test_gpio_read.cc  test_gpio_write.cc
example/periphery/pwm/: README.md
example/periphery/pwm/cpp/: CMakeLists.txt  README.md  test_pwm.cc
example/periphery/usart/: CMakeLists.txt  README.md  test_usart_read.cc  test_usart_write.cc
example/periphery/usart/cpp/: CMakeLists.txt  README.md
example/special/: digit_handwritten_rec.md
example/special/bar_code_recognition/: README.md
example/special/cat_and_dog_classification/: README.md
example/special/digit_handwritten_recognition/: README.md
example/special/face_system/: README.md
example/special/flower_classfication/: README.md
example/special/maskwear_classfication/: README.md
example/special/python/: README.md
example/special/qr_code_recognition/: README.md
example/vision/classification/: README.md
example/vision/detetcion/: README.md
example/vision/face_detection/: README.md  README_BAK.md
example/vision/face_recognition/: README.md
toolchains/: arm-rockchip830-linux-uclibcgnueabihf.toolchain.cmake
utils/: adb.py  create_classification_dataset.py  export.py  export_tensorflow.py  export_tflite.py  extera_images_from_video.py  quantized_data.py
utils/paddle/: prune_paddle_model.py
(+59 files in other folders)
